--- a/asset_management_app/pubspec.yaml
+++ b/asset_management_app/pubspec.yaml
@@ -39,6 +39,11 @@ dependencies:
   cloud_firestore: ^5.6.5
   google_sign_in: ^5.4.0
   intl: ^0.18.0
+  mobile_scanner: ^3.5.2
+  file_picker: ^10.1.2
+  share_plus: ^7.2.1
+  csv: ^5.1.1
+  path_provider: ^2.1.2
 
 dev_dependencies:
   flutter_test:
